syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 2100
// EnetChannelId: 0
// EnetIsReliable: true
message SalesmanTakeRewardRsp {
	int32 retcode = 2;
	uint32 schedule_id = 10;
	uint32 reward_id = 13;
	uint32 position = 5;
}
