syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "TrialAvatarActivityRewardDetailInfo.proto";

message TrialAvatarActivityDetailInfo {
	repeated TrialAvatarActivityRewardDetailInfo reward_info_list = 1;
}
